<resources>
    <string name="app_name">Parken in Amberg</string>
    <string name="title_activity_park">Parken in Amberg</string>
    <string name="garage0">Parkgarage am Kurfürstenbad</string>
    <string name="garage1">Theatergarage</string>
    <string name="garage2">Parkdeck Kräuterwiese</string>
    <string name="garage3">Parkgarage am Ziegeltor</string>
    <string name="garage4">Kurfürstenbad</string>
    <string name="garage5">Cineplex Amberg</string>
    <string name="garage6">Amberger Congress Centrum</string>
    <string name="garage7">Altstadtgarage</string>
    <string name="address0">Ernst-Michl-Platz, 92224 Amberg</string>
    <string name="address1">Mühlgasse 5, 92224 Amberg</string>
    <string name="address2">Sulzbacher Str. 2, 92224 Amberg</string>
    <string name="address3">Pfalzgrafenring 3, 92224 Amberg</string>
    <string name="address4">Kurfürstenring 2, 92224 Amberg</string>
    <string name="address5">Regensburger Str. 1, 92224 Amberg</string>
    <string name="address6">Schießstätteweg 8, 92224 Amberg</string>
    <string name="address7">Kaiser-Ludwig-Ring 2, 92224 Amberg</string>
    <string name="address0short">Ernst-Michl-Platz</string>
    <string name="address1short">Mühlgasse 5</string>
    <string name="address2short">Sulzbacher Str. 2</string>
    <string name="address3short">Pfalzgrafenring 3</string>
    <string name="address4short">Kurfürstenring 2</string>
    <string name="address5short">Regensburger Str. 1</string>
    <string name="address6short">Schießstätteweg 8</string>
    <string name="address7short">Kaiser-Ludwig-Ring 2</string>
    <string name="userposition">Aktuelle Position</string>
    <string name="favourites">Favoriten</string>
    <string name="maptype">Kartentyp ändern</string>
    <string name="noInternet">Keine Internetverbindung</string>
    <string name="settings">Einstellungen</string>
    <string name="settingsTitle">Einstellungen</string>
    <string name="FavoritenMenuTitle">Favoriten</string>
    <string name="help">Hilfe</string>
    <string name="red_help">Keine Parkplätze frei oder Parkhaus geschlossen</string>
    <string name="yellow_help">0-20% der Parkplätze frei</string>
    <string name="green_help">Mehr als 20% der Parkplätze frei</string>
    <string name="blue_help">Keine Information verfügbar</string>
</resources>
