<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="10dp">

    <TextView
        android:id="@+id/favosTitelView"
        android:text="Parkhäuser"
        android:textSize="35dp"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>


<LinearLayout
    android:layout_below="@id/favosTitelView"
    android:id="@+id/favos_container"
    android:layout_gravity="center"
    android:layout_centerHorizontal="true"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <Switch
        android:id="@+id/parkhaus1Switch"
        android:tag="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/address0"
        android:checked="true"/>
    <Switch
        android:id="@+id/parkhaus2Switch"
        android:tag="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/address1"
        android:checked="true"/>
    <Switch
        android:id="@+id/parkhaus3Switch"
        android:tag="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/address2"
        android:checked="true"/>
    <Switch
        android:id="@+id/parkhaus4Switch"
        android:tag="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/address3"
        android:checked="true"/>
    <Switch
        android:id="@+id/parkhaus5Switch"
        android:tag="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/address4"
        android:checked="true"/>
    <Switch
        android:id="@+id/parkhaus6Switch"
        android:tag="6"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:text="@string/address5"
        android:checked="true"
        android:layout_height="wrap_content"/>
    <Switch
        android:id="@+id/parkhaus7Switch"
        android:tag="7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/address6"
        android:checked="true"/>
    <Switch
        android:id="@+id/parkhaus8Switch"
        android:tag="8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address7"
        android:checked="true"/>
</LinearLayout>

    <Button android:id="@+id/favosCloseButton"
            android:layout_below="@id/favos_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="Close" />

</RelativeLayout>